# shimmer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.cast  demo.md  demo.py  pyproject.toml  spread.yaml  tox.ini  workshop.yaml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish-test-pypi.yaml  publish.yaml  security.yaml  spread.yaml  zizmor.yaml
.workshop/project-shimmer-dev/: sdk.yaml
.workshop/project-shimmer-dev/hooks/: check-health  setup-base  setup-project
.workshop/shimmer-dev/: sdk.yaml
.workshop/shimmer-dev/hooks/: setup-base  setup-project
src/shimmer/: __init__.py  _client.py  _process.py  _protocol.py  _runner.py
tests/integration/: conftest.py  test_parity.py  test_shimmer.py
tests/spread/core/: task.yaml
tests/spread/demo/: task.yaml
tests/spread/workshop/: task.yaml
tests/unit/: test_client.py  test_exports.py  test_process.py
